--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -104,6 +104,10 @@ ol {
 	    font-size: modular-scale(0, 1rem);
 	    line-height: modular-scale(1, 1rem);
 	}
+	@include media($mobile-landscape) {
+	    font-size: modular-scale(0, 1rem);
+	    line-height: modular-scale(1, 1rem);
+	}
 }
 
 ul.post-categories {
@@ -179,6 +183,10 @@ span.black-highlight {
 		@include media($bp-large) {
 			font-size: modular-scale(5, 1.4rem);
 			line-height:modular-scale(5, 1.4rem);
+		}
+		@include media($mobile-landscape) {
+			font-size: modular-scale(2, 1.3rem);
+			line-height:modular-scale(2, 1.3rem);
 		}
 	}
 	h2 {
@@ -259,6 +267,11 @@ main {
 		font-weight: 600;
 		color: rgba(0,0,0,0.90);
 	}
+	h3 {
+		@include media($mobile-landscape) {
+		    margin-top: 20px;
+		}
+	}
 	p {
 		margin-bottom: 20px;
 		@include media($bp-small) {
@@ -268,6 +281,10 @@ main {
 		@include media($bp-med) {
 		    font-size: modular-scale(0, 1.5rem);
 		    line-height: modular-scale(1, 1.5rem);
+		}
+		@include media($mobile-landscape) {
+			font-size: modular-scale(0, 1.3rem);
+			line-height:modular-scale(1, 1.3rem);
 		}
 	}
 }
@@ -302,6 +319,10 @@ main {
 			@include media($bp-small) {
 				font-size: modular-scale(1, 1.3rem); 
 				line-height: modular-scale(1, 1.5rem); 
+		    }
+		    @include media($mobile-landscape) {
+		    	font-size: modular-scale(1, 1.3rem);
+		    	line-height:modular-scale(1, 1.5rem);
 		    }
 			&:last-child {
 				&:after {
@@ -435,6 +456,10 @@ h2.team__hero-subheading {
 	@include media($bp-med) {
 		font-size: modular-scale(5);
 		line-height: modular-scale(4);
+	}
+	@include media($mobile-landscape) {
+		font-size: modular-scale(3);
+		line-height: modular-scale(2);
 	}
 	@include media($bp-large) {
 		font-size: modular-scale(7);
