--- a/custom/themes/ingenuity/src/sass/layout/_grid-settings.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_grid-settings.scss
@@ -8,18 +8,18 @@ $grid-columns: 5;
 $max-width: em(1100);
 
 // Major: Content centric breakpoints
-$iphone-5-landscape: em(568);
-$ipad-landscape: em(1024);
+$mobile-landscape: em(568);
+$tab-landscape: em(1024);
 
 // Portrait
 $bp-xlarge: new-breakpoint(min-width 80em 12);
 $bp-large: new-breakpoint(min-width 50em 12);
-$bp-med: new-breakpoint(min-width 30em 12);
+$bp-med: new-breakpoint(min-width 30em max-width 50em 12);
 $bp-small: new-breakpoint(max-width 30em 5);
 
 // Landscape
-$mobile-landscape: new-breakpoint(min-width $iphone-5-landscape orientation landscape 2);
-$tablet-landscape: new-breakpoint(min-width $ipad-landscape orientation landscape 12);
+$mobile-landscape: new-breakpoint(max-height $mobile-landscape orientation landscape 2);
+$tablet-landscape: new-breakpoint(max-width $tab-landscape orientation landscape 12);
 
 // Visual Grid view
 $visual-grid: false;
