--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -78,6 +78,7 @@
         font-size: modular-scale(0, 1.3rem);
         line-height: modular-scale(1, 1.3rem);
         font-weight: 300;
+        font-family: $lite-headings;
         @include media($bp-small) {
             font-size: modular-scale(0, 1.1rem);
             line-height: modular-scale(1, 1.1rem);
@@ -100,50 +101,3 @@
     // border-right: 25px solid $white;
 }
 
-.cell {
-    height: 100%;
-    width: 100%;
-    &:after {
-        content: '';
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        min-height: 100%;
-        z-index: 0;
-        overflow: hidden;
-    }
-    header {
-        @include outer-container;
-        position: relative;
-        z-index: 1;
-        top: 50%;
-        @include transform(translateY(-50%));
-    }
-    hgroup {
-        @include span-columns(5);
-        padding: 0 2em 0 2em;
-        @include media($bp-large) {
-            @include span-columns(7);
-        }
-    }
-    img {
-        object-fit: cover;
-        width: 100%;
-        height: auto;
-        position: absolute;
-        z-index: 0;
-        // @include filter(grayscale(100%) blur(1px));
-    }
-}
-
-.flickity-page-dots {
-    position: absolute;
-    width: 100%;
-    bottom: 20px;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    text-align: center;
-    line-height: 1;
-}
