--- a/custom/themes/ingenuity/src/sass/layout/_services.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_services.scss
@@ -61,10 +61,12 @@
 		margin: 0;
 		margin-top: 25px;
 		text-align: right;
+		// color: $grey;
 	}
 	h5 {
 		text-align: right;
 		margin: 0;
+		// color: $grey;
 	}
 	p {
 		padding-top: 20px;
