--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -57,11 +57,12 @@
 
 .rw-wrapper{
 	// width: 80%;
-	position: relative;
+	// position: relative;
 	margin: 110px auto 0 auto;
 	font-family: $main-headings;
 	padding: 10px;
 	z-index: 100;
+	width: 100%;
 	@include media($bp-small) {
 		margin-top: 20px;
 		width: 100%;
@@ -81,7 +82,7 @@ h2.rw-sentence{
 	text-align: left;
 	// text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
 	z-index: 100;
-	width: 100%;
+	// width: 100%;
 	@include media($bp-small) {
 		margin: 0 0 0 20px;
 		font-size: modular-scale(2, 1.3rem); 
