--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -4038,7 +4038,6 @@ Copyright (c) 2015 Daniel Eden
   transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24); }
 
 .main-footer {
-  min-height: 400px;
   width: 100%;
   background: black;
   color: white;
@@ -4050,14 +4049,14 @@ Copyright (c) 2015 Daniel Eden
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
+  -webkit-box-align: start;
+  box-align: start;
+  -webkit-align-items: flex-start;
+  -moz-align-items: flex-start;
+  -ms-align-items: flex-start;
+  -o-align-items: flex-start;
+  align-items: flex-start;
+  -ms-flex-align: start;
   -webkit-box-pack: center;
   box-pack: center;
   -webkit-justify-content: center;
@@ -4088,9 +4087,7 @@ Copyright (c) 2015 Daniel Eden
   .main-footer a {
     color: #fcd838; }
 
-.footer__blog,
-.footer__news,
-.footer__map {
+.footer__third {
   -webkit-box-flex: 1;
   box-flex: 1;
   -webkit-flex: 1 0 auto;
@@ -4098,26 +4095,170 @@ Copyright (c) 2015 Daniel Eden
   -ms-flex: 1 0 auto;
   flex: 1 0 auto; }
   @media screen and (min-width: 50em) {
-    .footer__blog,
-    .footer__news,
-    .footer__map {
+    .footer__third {
       -webkit-box-flex: 0;
       box-flex: 0;
       -webkit-flex: 0 0 30%;
       -moz-flex: 0 0 30%;
       -ms-flex: 0 0 30%;
       flex: 0 0 30%;
-      margin: 0 1.5%;
-      height: 350px; } }
+      margin: 0 1.5%; } }
+  .footer__third h3 {
+    font-family: "Audimat3000-Leger", sans-serif;
+    margin-bottom: 0px;
+    text-transform: uppercase; }
+  .footer__third p {
+    margin-bottom: 5px;
+    font-size: 1.2rem;
+    font-family: "Audimat3000-Leger", sans-serif; }
 
-.footer__blog h3 {
-  font-family: "Audimat3000-Leger", sans-serif;
-  margin-bottom: 20px;
-  text-transform: uppercase; }
-.footer__blog p {
-  margin-bottom: 5px;
-  padding-left: 10px;
-  font-size: 1.2rem; }
+#mc-embedded-subscribe-form.footer-newsletter {
+  padding: 0; }
+  #mc-embedded-subscribe-form.footer-newsletter h4 {
+    font-family: "Audimat3000-Leger", sans-serif;
+    margin-bottom: 20px; }
+
+form.footer-newsletter {
+  background-color: black; }
+  form.footer-newsletter input.footer__news__email {
+    background: black;
+    border: 1px solid #fcd838;
+    color: #fcd838; }
+  form.footer-newsletter #mc-embedded-subscribe {
+    background-color: #fcd838;
+    border-radius: 0;
+    color: black; }
+
+/* Individual styles */
+.input {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  max-width: 350px;
+  width: calc(100% - 2em);
+  vertical-align: top; }
+
+.input__field {
+  position: relative;
+  display: block;
+  float: right;
+  padding: 0.8em;
+  width: 100%;
+  border: none;
+  border-radius: 0;
+  background: #f0f0f0;
+  color: black;
+  font-weight: 400;
+  font-family: Helvetica, Arial, sans-serif;
+  -webkit-appearance: none;
+  /* for box shadows to show on iOS */ }
+
+.input__field:focus {
+  outline: none; }
+
+.input__label {
+  display: inline-block;
+  float: right;
+  padding: 0 1em;
+  width: 40%;
+  color: white;
+  font-weight: bold;
+  font-size: 70.25%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.input__label-content {
+  position: relative;
+  display: block;
+  padding: 1.6em 0;
+  width: 100%; }
+
+/* Ingenuity */
+.input--ingenuity {
+  overflow: hidden; }
+
+.input__field--ingenuity {
+  width: 100%;
+  background: transparent;
+  padding: 0.5em;
+  margin-bottom: 2em;
+  color: black;
+  z-index: 100;
+  opacity: 0; }
+
+.input__label--ingenuity {
+  width: 100%;
+  position: absolute;
+  text-align: left;
+  padding: 0.5em 0;
+  pointer-events: none;
+  font-size: 1em; }
+
+.input__label--ingenuity::before,
+.input__label--ingenuity::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  left: 0; }
+
+.input__label--ingenuity::before {
+  height: 100%;
+  background: #fcd838;
+  top: 0;
+  -webkit-transform: translate3d(0, -100%, 0);
+  transform: translate3d(0, -100%, 0);
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: transform 0.2s; }
+
+.input__label--ingenuity::after {
+  height: 2px;
+  background: #fcd838;
+  top: 100%;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s; }
+
+.input__label-content--ingenuity {
+  padding: 0;
+  -webkit-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+      transform-origin: 0 0;
+  -webkit-transition: -webkit-transform 0.2s, color 0.2s;
+  transition: transform 0.2s, color 0.2s; }
+
+.input__field--ingenuity:focus,
+.input--filled .input__field--ingenuity {
+  opacity: 1;
+  -webkit-transition: opacity 0s 0.2s;
+  transition: opacity 0s 0.2s; }
+
+.input__label--ingenuity::before,
+.input__label--ingenuity::after,
+.input__label-content--ingenuity,
+.input__field--ingenuity:focus,
+.input--filled .input__field--ingenuity {
+  -webkit-transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
+  transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1); }
+
+.input__field--ingenuity:focus + .input__label--ingenuity::before,
+.input--filled .input__label--ingenuity::before {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+.input__field--ingenuity:focus + .input__label--ingenuity::after,
+.input--filled .input__label--ingenuity::after {
+  opacity: 0; }
+
+.input__field--ingenuity:focus + .input__label--ingenuity .input__label-content--ingenuity,
+.input--filled .input__label--ingenuity .input__label-content--ingenuity {
+  color: #cbc4c6;
+  -webkit-transform: translate3d(0, 2.1em, 0) scale3d(0.65, 0.65, 1);
+  transform: translate3d(0, 2.1em, 0) scale3d(0.65, 0.65, 1); }
 
 .footer__map {
   position: relative; }
